DataSource for compiling sources from file system, fixes in Maven CodeGraph and tests