@@ -1,6 +1,7 @@
 package ru.joke.cdgraph.core.impl.datasources;
 
 import ru.joke.cdgraph.core.CodeGraphDataSource;
+import ru.joke.cdgraph.core.impl.maven.MavenModuleCodeGraph;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -8,7 +9,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 public abstract class CodeGraphDataSourceTestBase {
 
     private static final String MODULE_INFO_CLASS = "module-info.class";
-    private static final String MAVEN_POM_FILE = "/pom.xml";
     private static final String GRADLE_BUILD_FILE = "/build.gradle";
 
     protected void makeChecks(
@@ -18,13 +18,15 @@ public abstract class CodeGraphDataSourceTestBase {
             final int expectedMavenModules,
             final int expectedMavenModulesMetadataClasses) {
         final var configs = ds.find(MODULE_INFO_CLASS::equals);
-        final var warConfig = configs.get(0);
         assertEquals(expectedJavaModules, configs.size(), MODULE_INFO_CLASS + " should be found");
+
+        final var warConfig = configs.getFirst();
         assertEquals(expectedJavaModulesMetadataClasses, warConfig.classesMetadata().size(), "Classes metadata size must be equal");
 
-        final var mavenConfigs = ds.find(entry -> entry.endsWith(MAVEN_POM_FILE));
-        final var mavenEarConfig = mavenConfigs.get(0);
-        assertEquals(expectedMavenModules, mavenConfigs.size(), MAVEN_POM_FILE + " should be found");
+        final var mavenConfigs = ds.find(entry -> entry.endsWith(MavenModuleCodeGraph.POM_XML));
+        assertEquals(expectedMavenModules, mavenConfigs.size(), MavenModuleCodeGraph.POM_XML + " should be found");
+
+        final var mavenEarConfig = mavenConfigs.getFirst();
         assertEquals(expectedMavenModulesMetadataClasses, mavenEarConfig.classesMetadata().size(), "Classes metadata size must be equal");
 
         final var gradleConfigs = ds.find(GRADLE_BUILD_FILE::equals);
